# pygame-flappy-birds

./: .gitignore  README.md  pyproject.toml  run_game.py
project/: models.py  rendering.py  settings.py  textures.py
src/: __init__.py  components.py  constants.py  control.py  models.py  rendering.py  settings.py  textures.py
src/models/: background.py  bird.py  score.py
src/models/backgrounds/: background.py
src/models/pipes/: abstract.py  bottom.py  top.py
src/rendering/: common_data.py  entity_manager.py  painter.py  spawner.py
